
```console
$ pip install --user --upgrade --pre vcspull
```

[pipx](https://pypa.github.io/pipx/docs/):

```console
$ pipx install --suffix=@next 'vcspull' --pip-args '\--pre' --force
// Usage: vcspull@next sync [config]
```

## current - v1.13.x (unreleased)

- _Add your latest changes from PRs here_

### What's new

- Refreshed logo

### Development

- libvcs: Update to 0.13.x

### Bug fixes

- Fix cloning of mercurial repositories

## vcspull 1.12.3 (2022-06-01)

### Bug fixes

- Fix cloning of mercurial repositories (backported fix from libvcs 0.13.x)

## vcspull 1.12.2 (2022-05-15)

### Packaging

- Update tags and description

### Documentation

- Update README

## vcspull 1.12.1 (2022-05-02)

### Bug fixes

- Pin [click at
  8+](https://click.palletsprojects.com/en/8.0.x/changes/#version-8-0-0)

## vcspull 1.12.0 (2022-04-24)

Patch branch: [`v1.12.x`](https://github.com/vcs-python/vcspull/tree/v1.12.x)

### Breaking changes

- Config location uses `XDG_CONFIG_HOME` from [XDG Base Directory],
  ({issue}`367`).

  Old path: `~/.vcspull`

  New path: `XDG_CONFIG_HOME`, usually `~/.config/vcspull`

  [xdg base directory]: https://specifications.freedesktop.org/basedir-spec/basedir-spec-latest.html

- Override config directory via `VCSPULL_CONFIGDIR` ({issue}`367`)
- Switch from `str` to `pathlib.Path` ({issue}`364`)
- Requires click 8+

### Compatibility

- Allow click 8.1.x ({issue}`372`)
- vcspull learned `-h` for help (thanks HN 2022-04-11)
- Python 3.7 and 3.8 dropped (#356)

  Branch [`v1.11.x`](https://github.com/vcs-python/vcspull/tree/v1.11.x) opened for security / bug fixes.

- `--version` learned to show libvcs version
- `--version` learned to accept the `-V` flag
- `vcspull sync` accepts config file params via `--config`. Before it was only
  `-c`. Assume myrepos.yaml in your path:

  ```console
  $ vcspull sync --config myrepos.yaml
  ```

### Development

- Publish to PyPI via CI when git tags are pushed

### Documentation
